// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Live Validator Initialize cache and validate should not report error in response for GET/PUT resource calls when id is not returned in sub-level resources 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2015-11-01-preview",
      "operationId": "Solutions_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2015-11-01-preview",
      "operationId": "Solutions_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should not report error when LRO header is not returned in response in case of returning 201 code 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should report error in response for GET/PUT resource calls when id is not returned 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "MISSING_RESOURCE_ID",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$",
        ],
        "message": "id is required to return in response of GET/PUT resource calls but not being provided",
        "params": [
          "x-ms-azure-resource",
        ],
        "pathsInPayload": [
          "",
        ],
        "resourceIds": [],
        "schemaPath": "#/x-ms-azure-resource",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/LinkerResource",
          "position": {
            "column": 23,
            "line": 524,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should report error in response when response code isn't correct in case of long running operation 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "LRO_RESPONSE_CODE",
        "documentationUrl": "",
        "jsonPathsInPayload": [],
        "message": "Respond to the initial request of a long running operation, Patch/Post call must return 201 or 202, Delete call must return 202 or 204, Put call must return 202 or 201 or 200, but 204 being returned",
        "pathsInPayload": [],
        "schemaPath": "",
        "severity": 0,
        "source": {
          "position": {
            "column": 22,
            "line": 252,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should report error when LRO header is not returned in response in case of long running operation 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "LRO_RESPONSE_HEADER",
        "documentationUrl": "",
        "jsonPathsInPayload": [],
        "message": "Long running operation should return location or azure-AsyncOperation in header but not provided",
        "pathsInPayload": [],
        "schemaPath": "",
        "severity": 0,
        "source": {
          "position": {
            "column": 22,
            "line": 252,
          },
          "url": "specification/servicelinker/resource-manager/Microsoft.ServiceLinker/preview/2021-01-01-privatepreview/servicelinker.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2021-01-01-privatepreview",
      "operationId": "Linker_Update",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should return no errors for valid input with optional parameter body empty 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live Validator Initialize cache and validate should return no errors for valid input with optional parameter body null 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_Patch",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should match all errors for no options 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.email",
        ],
        "message": "Missing required property: email",
        "params": [
          "email",
        ],
        "pathsInPayload": [
          "/properties/email",
        ],
        "resourceIds": [],
        "schemaPath": "#/required",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/UserCreateParameterProperties",
          "position": {
            "column": 38,
            "line": 696,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.lastName",
        ],
        "message": "Expected type string but found type integer",
        "params": [
          "string",
          "integer",
        ],
        "pathsInPayload": [
          "/properties/lastName",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/lastName/type",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/UserContractProperties/properties/lastName",
          "position": {
            "column": 21,
            "line": 657,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.registrationDate",
        ],
        "message": "Object didn't pass validation for format date-time: 2018-09-11",
        "params": [
          "date-time",
          "2018-09-11",
        ],
        "pathsInPayload": [
          "/properties/registrationDate",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/registrationDate/format",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/UserContractProperties/properties/registrationDate",
          "position": {
            "column": 29,
            "line": 665,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
      {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.groups[0].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": [
          "id",
        ],
        "pathsInPayload": [
          "/properties/groups/0/id",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/additionalProperties",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
      {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.state",
        ],
        "message": "Enum does not match case for: Active",
        "params": [
          "Active",
          [
            "active",
            "blocked",
            "pending",
            "deleted",
          ],
        ],
        "pathsInPayload": [
          "/properties/state",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/state/enum",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should match for one of missing 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.options[0].restriction.primaryVerificationKey.keyValue",
        ],
        "message": "Object didn't pass validation for format byte: not valid base64",
        "params": [
          "byte",
          "not valid base64",
        ],
        "pathsInPayload": [
          "/properties/options/0/restriction/primaryVerificationKey/keyValue",
        ],
        "resourceIds": [],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ContentKeyPolicySymmetricTokenKey/properties/keyValue",
          "position": {
            "column": 21,
            "line": 388,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.policyId",
        ],
        "message": "Object didn't pass validation for format uuid: not valid base64",
        "params": [
          "uuid",
          "not valid base64",
        ],
        "pathsInPayload": [
          "/properties/policyId",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/policyId/format",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ContentKeyPolicyProperties/properties/policyId",
          "position": {
            "column": 21,
            "line": 688,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.options[0].policyOptionId",
        ],
        "message": "Object didn't pass validation for format uuid: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        "params": [
          "uuid",
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "pathsInPayload": [
          "/properties/options/0/policyOptionId",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/policyOptionId/format",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ContentKeyPolicyOption/properties/policyOptionId",
          "position": {
            "column": 27,
            "line": 659,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
      {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.options[0].restriction.audience",
        ],
        "message": "Missing required property: audience",
        "params": [
          "audience",
        ],
        "pathsInPayload": [
          "/properties/options/0/restriction/audience",
        ],
        "resourceIds": [],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ContentKeyPolicyTokenRestriction",
          "position": {
            "column": 41,
            "line": 446,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.options[0].restriction.primaryVerificationKey.keyValue",
        ],
        "message": "Object didn't pass validation for format byte: not valid base64",
        "params": [
          "byte",
          "not valid base64",
        ],
        "pathsInPayload": [
          "/properties/options/0/restriction/primaryVerificationKey/keyValue",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ContentKeyPolicySymmetricTokenKey/properties/keyValue",
          "position": {
            "column": 21,
            "line": 388,
          },
          "url": "specification/mediaservices/resource-manager/Microsoft.Media/2018-07-01/ContentKeyPolicies.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-07-01",
      "operationId": "ContentKeyPolicies_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should pass discriminator tests 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "INVALID_FORMAT",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.pet.lifetime",
        ],
        "message": "Object didn't pass validation for format date-time: abc",
        "params": [
          "date-time",
          "abc",
        ],
        "pathsInPayload": [
          "/pet/lifetime",
        ],
        "resourceIds": [],
        "schemaPath": "#/discriminatorMap",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/Cat/properties/lifetime",
          "position": {
            "column": 21,
            "line": 185,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return expected error for readonly property in the request 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.name",
        ],
        "message": "ReadOnly property "name" cannot be sent in the request",
        "params": [
          "name",
          null,
        ],
        "pathsInPayload": [
          "/name",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/name/readOnly",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/User/properties/name",
          "position": {
            "column": 17,
            "line": 133,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
      {
        "code": "READONLY_PROPERTY_NOT_ALLOWED_IN_REQUEST",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.readOnlyProperty",
        ],
        "message": "ReadOnly property "readOnlyProperty" cannot be sent in the request",
        "params": [
          "readOnlyProperty",
          null,
        ],
        "pathsInPayload": [
          "/readOnlyProperty",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/readOnlyProperty/x-ms-mutability",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/User/properties/readOnlyProperty",
          "position": {
            "column": 29,
            "line": 142,
          },
          "url": "specification/contoso/resource-manager/Microsoft.Contoso/2020-01-01/contoso.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2020-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return no errors for valid input 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_CASE_MISMATCH 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "ENUM_CASE_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.groups[0].type",
        ],
        "message": "Enum does not match case for: System",
        "params": [
          "System",
          [
            "custom",
            "system",
            "external",
          ],
        ],
        "pathsInPayload": [
          "/properties/groups/0/type",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/type/enum",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for ENUM_MISMATCH 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.state",
        ],
        "message": "No enum match for: dasda",
        "params": [
          "dasda",
          [
            "active",
            "blocked",
            "pending",
            "deleted",
          ],
        ],
        "pathsInPayload": [
          "/properties/state",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/state/enum",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/UserEntityBaseParameters/properties/state",
          "position": {
            "column": 18,
            "line": 750,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "ENUM_MISMATCH",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.groups[0].type",
        ],
        "message": "No enum match for: banana",
        "params": [
          "banana",
          [
            "custom",
            "system",
            "external",
          ],
        ],
        "pathsInPayload": [
          "/properties/groups/0/type",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/type/enum",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/GroupContractProperties/properties/type",
          "position": {
            "column": 17,
            "line": 611,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_FORMAT 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_RESPONSE_BODY 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "INVALID_RESPONSE_BODY",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          ".body",
        ],
        "message": "Body is required in response but not provided",
        "params": [
          "body",
        ],
        "pathsInPayload": [
          "/body",
        ],
        "resourceIds": [],
        "schemaPath": "#/required",
        "severity": 0,
        "source": {
          "position": {
            "column": 18,
            "line": 192,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_RESPONSE_HEADER 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          ".headers.featureaflag",
        ],
        "message": "Expected type boolean but found type string",
        "params": [
          "boolean",
          "string",
        ],
        "pathsInPayload": [
          "/headers/featureaflag",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/headers/properties/featureaflag/type",
        "severity": 0,
        "source": {
          "position": {
            "column": 31,
            "line": 198,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for INVALID_TYPE 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "INVALID_TYPE",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.hostnameConfigurations",
        ],
        "message": "Expected type array but found type string",
        "params": [
          "array",
          "string",
        ],
        "pathsInPayload": [
          "/properties/hostnameConfigurations",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/hostnameConfigurations/type",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ApiManagementServiceBaseProperties/properties/hostnameConfigurations",
          "position": {
            "column": 35,
            "line": 934,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimdeployment.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiManagementService_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MAX_LENGTH 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "MAX_LENGTH",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.description",
        ],
        "message": "String is too long (1958 chars), maximum 1000",
        "params": [
          1958,
          1000,
        ],
        "pathsInPayload": [
          "/properties/description",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/properties/description/maxLength",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/OperationEntityBaseContract/properties/description",
          "position": {
            "column": 24,
            "line": 4236,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "ApiOperation_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for MISSING_REQUIRED_PARAMETER 1`] = `
{
  "requestValidationResult": {
    "errors": [
      {
        "code": "MISSING_REQUIRED_PARAMETER",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          ".body",
        ],
        "message": "Value is required but was not provided",
        "params": [
          "body",
        ],
        "pathsInPayload": [
          "/body",
        ],
        "resourceIds": [],
        "schemaPath": "#/required",
        "severity": 0,
        "source": {
          "position": {
            "column": 11,
            "line": 197,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusers.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_ADDITIONAL_PROPERTIES 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "OBJECT_ADDITIONAL_PROPERTIES",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.groups[0].id",
          "$.properties.groups[1].id",
        ],
        "message": "Additional properties not allowed: id",
        "params": [
          "id",
        ],
        "pathsInPayload": [
          "/properties/groups/0/id",
          "/properties/groups/1/id",
        ],
        "resourceIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaa",
          "aaaaaaaaaaaaaaaaaaaaaa",
        ],
        "schemaPath": "#/additionalProperties",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_MISSING_REQUIRED_PROPERTY 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "OBJECT_MISSING_REQUIRED_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.groups[0].displayName",
        ],
        "message": "Missing required property: displayName",
        "params": [
          "displayName",
        ],
        "pathsInPayload": [
          "/properties/groups/0/displayName",
        ],
        "resourceIds": [],
        "schemaPath": "#/required",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/GroupContractProperties",
          "position": {
            "column": 32,
            "line": 593,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimgroups.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "User_CreateOrUpdate",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_PROPERTIES_MAXIMUM 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "OBJECT_PROPERTIES_MAXIMUM",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.testMaxMinProperties",
        ],
        "message": "Too many properties defined (4), maximum 3",
        "params": [
          4,
          3,
        ],
        "pathsInPayload": [
          "/testMaxMinProperties",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/testMaxMinProperties/maxProperties",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ApiContract/properties/testMaxMinProperties",
          "position": {
            "column": 33,
            "line": 3643,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for OBJECT_PROPERTIES_MINIMUM 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "OBJECT_PROPERTIES_MINIMUM",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.testMaxMinProperties",
        ],
        "message": "Too few properties defined (1), minimum 2",
        "params": [
          1,
          2,
        ],
        "pathsInPayload": [
          "/testMaxMinProperties",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/testMaxMinProperties/minProperties",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/ApiContract/properties/testMaxMinProperties",
          "position": {
            "column": 33,
            "line": 3643,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimapis.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "Api_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for SECRET_PROPERTY 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "SECRET_PROPERTY",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.password",
        ],
        "message": "Secret property "password" cannot be sent in the response",
        "params": [
          "password",
          null,
        ],
        "pathsInPayload": [
          "/properties/password",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/password/x-ms-secret",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/SecretUserContractProperties/properties/password",
          "position": {
            "column": 21,
            "line": 146,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimusersecret.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "SecretUser_Get",
    },
    "runtimeException": undefined,
  },
}
`;

exports[`Live validator snapshot validation should return the expected error requestResponse validation for WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE 1`] = `
{
  "requestValidationResult": {
    "errors": [],
    "isSuccessful": true,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
  "responseValidationResult": {
    "errors": [
      {
        "code": "WRITEONLY_PROPERTY_NOT_ALLOWED_IN_RESPONSE",
        "documentationUrl": "",
        "jsonPathsInPayload": [
          "$.properties.propertyUsage",
        ],
        "message": "Write-only property "propertyUsage" is not allowed in the response",
        "params": [
          "propertyUsage",
          null,
        ],
        "pathsInPayload": [
          "/properties/propertyUsage",
        ],
        "resourceIds": [],
        "schemaPath": "#/properties/propertyUsage/x-ms-mutability",
        "severity": 0,
        "source": {
          "jsonRef": "#/definitions/WriteOnlyPropertyContractProperties/properties/propertyUsage",
          "position": {
            "column": 26,
            "line": 142,
          },
          "url": "specification/apimanagement/resource-manager/Microsoft.ApiManagement/preview/2018-01-01/apimwriteonly.json",
        },
      },
    ],
    "isSuccessful": false,
    "operationInfo": {
      "apiVersion": "2018-01-01",
      "operationId": "WriteOnlyProperty_Get",
    },
    "runtimeException": undefined,
  },
}
`;
